--- a/main.css
+++ b/main.css
@@ -101,6 +101,7 @@ input {
 
 .low-or-high {
   margin-top: 10px;
+  font-weight: 700;
 }
 
 .reset, 
@@ -135,7 +136,6 @@ h3 {
 
 @media (min-width: 300px) {
  body {
-  font-size: 10px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
  }
