--- a/main.css
+++ b/main.css
@@ -77,8 +77,67 @@ input {
   background-color: #EB3223;
 }
 
+.size {
+  width: 200px;
+  position: absolute;
+  z-index: 1;
+} 
 
+.hide-one {
+ display: none;
+}
 
+.one {
+  top: 500px;
+  left: 30px;
+}
+
+.hide-two {
+ display: none;
+}
+
+.two {
+ top: 700px;
+ left: 714px;
+}
+
+.hide-three {
+ display: none;
+}
+
+.three {
+  top: 800px;
+  left: 26px;
+}
+
+.hide-four {
+ display: none;
+}
+
+.four {
+  top: 300px;
+  left: 720px;
+}
+
+.hide-five {
+ display: none;
+}
+
+.five {
+  top: 950px;
+  left: 600px;
+}
+
+.hide-six {
+ display: none;
+}
+
+.six {
+  height: 150px;
+  width: 155px;
+  top: 1005px;
+  left: 200px;
+}
 
 .guess-number {
   margin-right: 26px;
